section of dislike article by user completed
