# article/article_handler.go
@@ -38,6 +38,7 @@ func (a *ArticleHandler) InitHandler(ech *echo.Echo) {
 	group.DELETE("/property/:propertyId", a.DeleteArticleProperty)
 
 	group.PUT("/like", a.LikeArticle, middleware.JwtMiddleware)
+	group.PUT("/dislike", a.DislikeArticle, middleware.JwtMiddleware)
 }
 
 // AddArticle godoc
@@ -421,6 +422,43 @@ func (a *ArticleHandler) LikeArticle(ctx echo.Context) error {
 
 	// update article
 	if err := a.service.LikeArticle(&data); err != nil {
+		return echo.NewHTTPError(err.Code, err.Message)
+	}
+
+	// success
+	return ctx.JSON(http.StatusOK, map[string]interface{}{
+		"msg": "ok",
+	})
+}
+
+// @Description dislike article
+// @Tags articles
+// @Accept json
+// @Produce json
+// @Param register body LikeOrDislikeArticle ture "like article"
+// @Router /article/dislike [put]
+// @Security BearerAuth
+func (a *ArticleHandler) DislikeArticle(ctx echo.Context) error {
+	// get data
+	var data LikeOrDislikeArticle
+
+	// bind json to struct
+	if err := ctx.Bind(&data); err != nil {
+		fmt.Println(err)
+		return echo.NewHTTPError(http.StatusBadRequest, constants.InvalidInputFormat)
+	}
+
+	// validate
+	vs := utils.GetValidator()
+	vsErrs := vs.Validate(data)
+	if len(vsErrs) > 0 {
+		return echo.NewHTTPError(http.StatusBadRequest, map[string]interface{}{
+			"errors": vsErrs,
+		})
+	}
+
+	// update article
+	if err := a.service.DislikeArticle(&data); err != nil {
 		return echo.NewHTTPError(err.Code, err.Message)
 	}
 
